--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ mono_crash.*.json
 assets/models/framework_cad/Assembly 1.gltf
 assets/models/framework_cad/Assembly 1.gltf.import
 assets/models/framework_cad/cad.blend.import
+*.step
+assets/models/framework_cad/motherboard/mobo.glb
